# llama_index_example_1

./: .flake8  .gitignore  README.md  app.py  config.py  main.py  pyproject.toml  setup.cfg
modules/: __init__.py  data_extraction.py  data_processing.py  llm_interface.py  query_engine.py
